move intel examples

--- a/examples/cyber_dev_day/notebooks/cyber-dev-day.ipynb
+++ b/examples/cyber_dev_day/notebooks/cyber-dev-day.ipynb
@@ -554,7 +554,48 @@
     "To enhance the model's effectiveness, we can <b>directly include specific details about the CVE in our prompts</b>. This approach leverages the model's ability to analyze information and compensates for its inability to access real-time data.<br>\n",
     "By doing so, the model can provide more precise and helpful recommendations concerning particular issues.\n",
     "\n",
-    "Below is an example illustrating how to create a prompt template that allows us to easily insert information of any given CVE:\n"
+    "**<u>CVE Intel Examples</u>**<br>\n",
+    "Here are two example CVEs that we'll be using as recurring examples throughout the notebook (the information is sourced  from the internet): "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70451746",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PYARROW_CVE_INTEL = dict(\n",
+    "    cve=\"CVE-2023-47248\",\n",
+    "    cve_description=\"Deserialization of untrusted data in IPC and Parquet readers in PyArrow before version 14.0.0 allows arbitrary code execution. It is recommended \\\n",
+    "that users of PyArrow upgrade to 14.0.1. Similarly, it is recommended that downstream libraries upgrade their dependency requirements to PyArrow 14.0.1 or later. PyPI \\\n",
+    "packages are already available, and we hope that conda-forge packages will be available soon. If it is not possible to upgrade, we provide a separate package `pyarrow-hotfix` \\\n",
+    "for you to import to your codebase. This fix disables the vulnerability on older PyArrow versions. See https://pypi.org/project/pyarrow-hotfix/ for importing instructions.\",\n",
+    "    vuln_package=\"PyArrow\",\n",
+    "    vuln_package_version=\"before 14.0.1\",\n",
+    "    cvss3=\"CVSS:3.1/AV:N/AC:L/PR:N/UI:N/S:U/C:H/I:H/A:H\",\n",
+    ")\n",
+    "\n",
+    "LOG4J_CVE_INTEL = dict(\n",
+    "    cve=\"CVE-2021-44228\",\n",
+    "    cve_description=\"Apache Log4j2 2.0-beta9 through 2.15.0 (excluding security releases 2.12.2, 2.12.3, and 2.3.1) JNDI features used in \"\n",
+    "    \"configuration, log messages, and parameters do not protect against attacker controlled LDAP and other JNDI related endpoints. An attacker \"\n",
+    "    \"who can control log messages or log message parameters can execute arbitrary code loaded from LDAP servers when message lookup substitution \"\n",
+    "    \"is enabled. From log4j 2.15.0, this behavior has been disabled by default. From version 2.16.0 (along with 2.12.2, 2.12.3, and 2.3.1), this \"\n",
+    "    \"functionality has been completely removed. Note that this vulnerability is specific to log4j-core and does not affect log4net, log4cxx, or \"\n",
+    "    \"other Apache Logging Services projects.\",\n",
+    "    vuln_package=\"log4j\",\n",
+    "    vuln_package_version=\"from 2.0.1 up to (excluding) 2.3.1, from 2.4.0 up to (excluding) 2.12.2, from 2.13.0 up to (excluding) 2.15.0\",\n",
+    "    cvss3=\"CVSS:3.1/AV:N/AC:L/PR:N/UI:N/S:C/C:H/I:H/A:H\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b3ad0c8e",
+   "metadata": {},
+   "source": [
+    "Below is an example illustrating how to create a prompt template that allows us to easily insert information of any given CVE:"
    ]
   },
   {
@@ -566,31 +607,6 @@
    },
    "outputs": [],
    "source": [
-    "PYARROW_CVE_INTEL = dict(\n",
-    "    cve=\"CVE-2023-47248\",\n",
-    "    cve_description=\n",
-    "    \"Deserialization of untrusted data in IPC and Parquet readers in PyArrow before version 14.0.0 allows arbitrary code execution. It is recommended \\\n",
-    "that users of PyArrow upgrade to 14.0.1. Similarly, it is recommended that downstream libraries upgrade their dependency requirements to PyArrow 14.0.1 or later. PyPI \\\n",
-    "packages are already available, and we hope that conda-forge packages will be available soon. If it is not possible to upgrade, we provide a separate package `pyarrow-hotfix` \\\n",
-    "for you to import to your codebase. This fix disables the vulnerability on older PyArrow versions. See https://pypi.org/project/pyarrow-hotfix/ for importing instructions.\",\n",
-    "    vuln_package=\"PyArrow\",\n",
-    "    vuln_package_version=\"before 14.0.1\",\n",
-    "    cvss3=\"CVSS:3.1/AV:N/AC:L/PR:N/UI:N/S:U/C:H/I:H/A:H\")\n",
-    "\n",
-    "LOG4J_CVE_INTEL = dict(\n",
-    "    cve=\"CVE-2021-44228\",\n",
-    "    cve_description=\n",
-    "    \"Apache Log4j2 2.0-beta9 through 2.15.0 (excluding security releases 2.12.2, 2.12.3, and 2.3.1) JNDI features used in \"\n",
-    "    \"configuration, log messages, and parameters do not protect against attacker controlled LDAP and other JNDI related endpoints. An attacker \"\n",
-    "    \"who can control log messages or log message parameters can execute arbitrary code loaded from LDAP servers when message lookup substitution \"\n",
-    "    \"is enabled. From log4j 2.15.0, this behavior has been disabled by default. From version 2.16.0 (along with 2.12.2, 2.12.3, and 2.3.1), this \"\n",
-    "    \"functionality has been completely removed. Note that this vulnerability is specific to log4j-core and does not affect log4net, log4cxx, or \"\n",
-    "    \"other Apache Logging Services projects.\",\n",
-    "    vuln_package=\"log4j\",\n",
-    "    vuln_package_version=\n",
-    "    \"from 2.0.1 up to (excluding) 2.3.1, from 2.4.0 up to (excluding) 2.12.2, from 2.13.0 up to (excluding) 2.15.0\",\n",
-    "    cvss3=\"CVSS:3.1/AV:N/AC:L/PR:N/UI:N/S:C/C:H/I:H/A:H\")\n",
-    "\n",
     "prompt_template = \"\"\"Generate a checklist for a security analyst to use when assessing the exploitability of a specific CVE within a containerized environment. \\\n",
     "For each checklist item, start with an action verb, making it clear and actionable. Provide the checklist as a Python list of strings. \\\n",
     "Utilize the provided CVE details below to tailor the checklist items specifically for this CVE.\n",
