Adding code comments and fixing numbering

--- a/examples/cyber_dev_day/notebooks/cyber-dev-day.ipynb
+++ b/examples/cyber_dev_day/notebooks/cyber-dev-day.ipynb
@@ -561,7 +561,8 @@
    "source": [
     "PYARROW_CVE_INTEL = dict(\n",
     "    cve=\"CVE-2023-47248\",\n",
-    "    cve_description=\"Deserialization of untrusted data in IPC and Parquet readers in PyArrow before version 14.0.0 allows arbitrary code execution. It is recommended \\\n",
+    "    cve_description=\n",
+    "    \"Deserialization of untrusted data in IPC and Parquet readers in PyArrow before version 14.0.0 allows arbitrary code execution. It is recommended \\\n",
     "that users of PyArrow upgrade to 14.0.1. Similarly, it is recommended that downstream libraries upgrade their dependency requirements to PyArrow 14.0.1 or later. PyPI \\\n",
     "packages are already available, and we hope that conda-forge packages will be available soon. If it is not possible to upgrade, we provide a separate package `pyarrow-hotfix` \\\n",
     "for you to import to your codebase. This fix disables the vulnerability on older PyArrow versions. See https://pypi.org/project/pyarrow-hotfix/ for importing instructions.\",\n",
@@ -572,14 +573,16 @@
     "\n",
     "LOG4J_CVE_INTEL = dict(\n",
     "    cve=\"CVE-2021-44228\",\n",
-    "    cve_description=\"Apache Log4j2 2.0-beta9 through 2.15.0 (excluding security releases 2.12.2, 2.12.3, and 2.3.1) JNDI features used in \"\n",
+    "    cve_description=\n",
+    "    \"Apache Log4j2 2.0-beta9 through 2.15.0 (excluding security releases 2.12.2, 2.12.3, and 2.3.1) JNDI features used in \"\n",
     "    \"configuration, log messages, and parameters do not protect against attacker controlled LDAP and other JNDI related endpoints. An attacker \"\n",
     "    \"who can control log messages or log message parameters can execute arbitrary code loaded from LDAP servers when message lookup substitution \"\n",
     "    \"is enabled. From log4j 2.15.0, this behavior has been disabled by default. From version 2.16.0 (along with 2.12.2, 2.12.3, and 2.3.1), this \"\n",
     "    \"functionality has been completely removed. Note that this vulnerability is specific to log4j-core and does not affect log4net, log4cxx, or \"\n",
     "    \"other Apache Logging Services projects.\",\n",
     "    vuln_package=\"log4j\",\n",
-    "    vuln_package_version=\"from 2.0.1 up to (excluding) 2.3.1, from 2.4.0 up to (excluding) 2.12.2, from 2.13.0 up to (excluding) 2.15.0\",\n",
+    "    vuln_package_version=\n",
+    "    \"from 2.0.1 up to (excluding) 2.3.1, from 2.4.0 up to (excluding) 2.12.2, from 2.13.0 up to (excluding) 2.15.0\",\n",
     "    cvss3=\"CVSS:3.1/AV:N/AC:L/PR:N/UI:N/S:C/C:H/I:H/A:H\",\n",
     ")"
    ]
@@ -1457,7 +1460,9 @@
     "\n",
     "Intro to LLM Agents and how our checklist + agents approach can help solve multi-step problems.\n",
     "\n",
-    "#### 2.4.2 - The Morpheus CVE Pipeline\n"
+    "#### 2.4.2 - The Morpheus CVE Pipeline\n",
+    "\n",
+    "To convert our RAG pipeline into a CVE pipeline, all we need to do is update the LLM engine to run the CVE steps instead of a single RAG node as before."
    ]
   },
   {
@@ -1483,25 +1488,30 @@
     "async def run_cve_pipeline(p_config: Config, e_config: EngineConfig, input_cves: list[str]):\n",
     "    source_dfs = [cudf.DataFrame({\"cve_info\": input_cves})]\n",
     "\n",
+    "    # Create a completion task to be used by the DeserializeStage. This indicates which columns to use from the\n",
+    "    # dataframe\n",
     "    completion_task = {\"task_type\": \"completion\", \"task_dict\": {\"input_keys\": [\"cve_info\"], }}\n",
     "\n",
     "    pipe = LinearPipeline(p_config)\n",
     "\n",
+    "    # Create a source object which will emit our dataframe into the pipeline\n",
     "    pipe.set_source(InMemorySourceStage(p_config, dataframes=source_dfs))\n",
     "\n",
+    "    # The deserialize stage will take the dataframe and convert it into a ControlMessage object\n",
     "    pipe.add_stage(\n",
     "        DeserializeStage(p_config, message_type=ControlMessage, task_type=\"llm_engine\", task_payload=completion_task))\n",
     "\n",
+    "    # Add the LLM Engine stage to the pipeline. This executes our CVE workflow and runs the LLM model\n",
     "    pipe.add_stage(LLMEngineStage(p_config, engine=build_cve_llm_engine(e_config)))\n",
     "\n",
+    "    # Add a sink to the pipeline to capture the output of the pipeline\n",
     "    sink = pipe.add_stage(InMemorySinkStage(p_config))\n",
     "\n",
+    "    # Run the pipeline. This will complete once all messages have been processed\n",
     "    await pipe.run_async()\n",
     "\n",
     "    messages = sink.get_messages()\n",
     "    responses = concat_dataframes(messages)\n",
-    "\n",
-    "    logger.info(\"Pipeline complete\")\n",
     "\n",
     "    logger.info(\"Received %s responses:\\n%s\", len(messages), responses[[\"checklist\", \"response\"]].to_json(indent=2))"
    ]
@@ -1511,7 +1521,7 @@
    "id": "bf81f7ed",
    "metadata": {},
    "source": [
-    "#### 2.4.2 - The Engine Config\n",
+    "#### 2.4.3 - The Engine Config\n",
     "\n",
     "The `EngineConfig` object controls options about the CVE pipeline we are building. It allows us to contain all of the settings in a single object which can be easily used from many different classes which will be used to construct the pipeline. Below we will create the default configuration we will be using for the rest of the notebook.\n"
    ]
@@ -1580,7 +1590,7 @@
    "id": "806649e4",
    "metadata": {},
    "source": [
-    "#### 2.4.3 - Running the Pipeline\n",
+    "#### 2.4.4 - Running the Pipeline\n",
     "\n",
     "Now that the pipeline has been defined and the configuration variables have been created, it's time to run the pipeline. The final step is to convert the PyArrow intel dictionary into a single string that our `run_cve_pipeline` function accepts using a template `cve_details_template`. To simplify converting intel dictionaries into strings in the rest of the notebook, we will reuse this template."
    ]
@@ -1590,6 +1600,7 @@
    "execution_count": null,
    "id": "001ee70c",
    "metadata": {
+    "scrolled": true,
     "tags": []
    },
    "outputs": [],
@@ -1613,7 +1624,29 @@
    "id": "8c4b8a57",
    "metadata": {},
    "source": [
-    "#### 2.4.4 - Hitting the Limits of the LLMs\n",
+    "The output of the pipeline should look like the following: \n",
+    "```\n",
+    "Received 1 responses:\n",
+    "{\n",
+    "  \"checklist\":{\n",
+    "    \"0\":[\n",
+    "      \"Check for PyArrow: Verify if your project uses the PyArrow library, which is the affected package. If PyArrow is not a dependency in your project, then your code is not vulnerable to this CVE.\",\n",
+    "      \"Review Affected Versions: If PyArrow is used, check the version that your project depends on. According to the vulnerability details, versions before 14.0.1 are affected by this vulnerability.\",\n",
+    "      \"Review Code To Check for Vulnerability Mitigation: Check if the 'pyarrow-hotfix' package is imported to mitigate the risk of arbitrary code execution.\"\n",
+    "    ]\n",
+    "  },\n",
+    "  \"response\":{\n",
+    "    \"0\":[\n",
+    "      \"Yes, the project uses the PyArrow library, version 11.0.0.\",\n",
+    "      \"Yes, the project is affected by the vulnerability as it depends on PyArrow version 11.0.0, which is before the version 14.0.1 that is not affected by the vulnerability.\",\n",
+    "      \"Yes, the 'pyarrow-hotfix' package is imported in the Docker container's code to mitigate the risk of arbitrary code execution due to CVE-2023-47248.\"\n",
+    "    ]\n",
+    "  }\n",
+    "}\n",
+    "```\n",
+    "In the output, we can see the output from the first model, which will be the generated checklist items, and the output of each agent, which will be the response to each checklist item. Looking at the checklist items and answers, we can see that the model has successfully determined that the project is vulnerable to the CVE.\n",
+    "\n",
+    "#### 2.4.5 - Hitting the Limits of the LLMs\n",
     "\n",
     "While LLMs can work well for many tasks, they are not perfect. They can fail on seemingly simple tasks, get into a loop, or not follow the output formatting correctly. These edge cases can be hard to catch and can be difficult to debug. For example, if we use the below prompt about Log4j, what happens when we run the pipeline?\n"
    ]
@@ -1623,6 +1656,7 @@
    "execution_count": null,
    "id": "1a7e791c",
    "metadata": {
+    "scrolled": true,
     "tags": []
    },
    "outputs": [],
@@ -1775,6 +1809,7 @@
    "execution_count": null,
    "id": "f91ef4fe",
    "metadata": {
+    "scrolled": true,
     "tags": []
    },
    "outputs": [],
@@ -2010,8 +2045,6 @@
     "\n",
     "    messages = sink.get_messages()\n",
     "    responses = concat_dataframes(messages)\n",
-    "\n",
-    "    logger.info(\"Pipeline complete\")\n",
     "\n",
     "    logger.info(\"Received %s responses:\\n%s\", len(messages), responses[\"response\"])"
    ]
